Migrate to spring 3.x

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.data.build</groupId>
         <artifactId>spring-data-parent</artifactId>
-        <version>2.7.6</version>
+        <version>3.0.2</version>
     </parent>
 
     <groupId>io.cockroachdb</groupId>
@@ -55,20 +55,21 @@
     </issueManagement>
 
     <properties>
+        <java-module-name>spring.data.cockroachdb</java-module-name>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <java-module-name>spring.data.cockroachdb</java-module-name>
+        <spring.boot.version>3.0.2</spring.boot.version>
+        <spring.data.version>3.0.2</spring.data.version>
+        <spring.shell.version>3.0.0</spring.shell.version>
 
-        <spring.boot.version>2.7.6</spring.boot.version>
-        <spring.shell.version>2.1.4</spring.shell.version>
-
-        <datasource-proxy.version>1.8</datasource-proxy.version>
-        <hikari.version>4.0.3</hikari.version>
+        <datasource-proxy.version>1.8.1</datasource-proxy.version>
+        <hikari.version>5.0.1</hikari.version>
         <slf4j.version>1.7.36</slf4j.version>
-        <logback.version>1.2.11</logback.version>
+        <logback.version>1.4.5</logback.version>
         <mockito.version>4.8.1</mockito.version>
-        <junit-jupiter.version>5.9.1</junit-jupiter.version>
+        <junit-jupiter.version>5.9.2</junit-jupiter.version>
     </properties>
 
     <distributionManagement>
@@ -100,18 +101,18 @@
             <dependency>
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
-                <version>1.9.7</version>
+                <version>1.9.19</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-commons</artifactId>
-                <version>2.7.6</version>
+                <version>${spring.data.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jdbc</artifactId>
-                <version>2.4.6</version>
+                <version>${spring.data.version}</version>
             </dependency>
 
             <dependency>
@@ -123,6 +124,11 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-logging</artifactId>
                 <version>${spring.boot.version}</version>
             </dependency>
             <dependency>
@@ -176,7 +182,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M7</version>
+                    <version>3.0.0-M9</version>
                     <executions>
                         <execution>
                             <id>test</id>
@@ -191,8 +197,9 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.10.1</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>17</source>
+                        <target>17</target>
+                        <release>17</release>
                         <encoding>UTF-8</encoding>
                         <compilerArgument>-Xlint:unchecked</compilerArgument>
                         <compilerArgument>-Xlint:deprecation</compilerArgument>
