--- a/spring-data-cockroachdb-examples/jpa-basics/src/main/resources/application.yml
+++ b/spring-data-cockroachdb-examples/jpa-basics/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active:
   datasource:
-    url: "jdbc:cockroachdb://localhost:26257/spring_data?sslmode=disable"
+    url: jdbc:cockroachdb://localhost:26257/spring_data_test?sslmode=disable
     driver-class-name: io.cockroachdb.jdbc.CockroachDriver
     username: root
     hikari:
@@ -10,6 +10,7 @@ spring:
       minimum-idle: 5
       max-lifetime: 1800000
       connection-timeout: 60000
+      initialization-fail-timeout: -1
   flyway:
     enabled: true
     clean-on-validation-error: true
@@ -17,7 +18,25 @@ spring:
     locations: classpath:db/basics
   jpa:
     open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.CockroachDialect
+        connection:
+          provider_disables_autocommit: false
+        jdbc:
+          lob:
+            non_contextual_creation: true
+          batch_size: 128
+          fetch_size: 128
+          batch_versioned_data: true
+        order_inserts: true
+        order_updates: true
+        hql:
+          bulk_id_strategy: org.hibernate.hql.spi.id.inline.CteValuesListBulkIdStrategy
+        cache:
+          use_minimal_puts: true
+          use_second_level_cache: false
 logging:
   pattern:
-    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr([%15.15t]){faint} %clr([%logger{39}]){cyan} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
+    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr([%t]){faint} %clr([%logger{39}]){cyan} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
     file: "%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}} ${LOG_LEVEL_PATTERN:%5p} [%t] %logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
