--- a/spring-data-cockroachdb-it/pom.xml
+++ b/spring-data-cockroachdb-it/pom.xml
@@ -29,6 +29,10 @@
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
 
         <!-- Spring Boot -->
         <dependency>
