--- a/spring-data-cockroachdb-it/src/main/resources/application.yml
+++ b/spring-data-cockroachdb-it/src/main/resources/application.yml
@@ -2,11 +2,12 @@ spring:
   profiles:
     # jdbc      - Use JDBC for data access
     # jpa       - Use JPA+Hibernate for data access
-    # app-retry - Enable app-side, AOP-driven retry logic, disable driver level retries
+    # app-retry - Enable client-side retry logic and disable JDBC driver level retries (default)
     # dev       - Use dev host (internal)
-    active: jdbc
+    # dedicated - Use CC cluster (req whitelisting)
+    active: jdbc,dedicated
   datasource:
-    url: "jdbc:cockroachdb://localhost:26257/spring_data?sslmode=disable"
+    url: "jdbc:cockroachdb://localhost:26257/spring_data_test?sslmode=disable"
     driver-class-name: io.cockroachdb.jdbc.CockroachDriver
     username: root
     password:
@@ -15,9 +16,10 @@ spring:
     clean-on-validation-error: true
     baseline-on-migrate: true
     locations: classpath:db/bank
+    clean-disabled: false
   jpa:
     open-in-view: false
 logging:
   pattern:
-    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr([%15.15t]){faint} %clr([%X{retry.connection}]){faint} %clr([%logger{39}]){cyan} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
+    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr([%t]){faint} %clr([%X{retry.connection}]){faint} %clr([%logger{39}]){cyan} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
     file: "%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}} ${LOG_LEVEL_PATTERN:%5p} [%t] %logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
