--- a/spring-data-cockroachdb-examples/jdbc-basics/src/main/resources/application-dev.yml
+++ b/spring-data-cockroachdb-examples/jdbc-basics/src/main/resources/application-dev.yml
@@ -1,3 +1,3 @@
 spring:
   datasource:
-    url: "jdbc:cockroachdb://192.168.1.99:26257/spring_data?sslmode=disable"
+    url: "jdbc:cockroachdb://192.168.1.99:26257/spring_data_test?sslmode=disable"
