--- a/spring-data-cockroachdb-examples/jpa-basics/pom.xml
+++ b/spring-data-cockroachdb-examples/jpa-basics/pom.xml
@@ -12,6 +12,8 @@
     <artifactId>jpa-basics</artifactId>
     <packaging>jar</packaging>
 
+    <name>Spring Data CockroachDB JPA Example</name>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -40,6 +42,10 @@
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
 
         <!-- Test -->
