--- a/spring-data-cockroachdb-examples/pom.xml
+++ b/spring-data-cockroachdb-examples/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.cockroachdb</groupId>
         <artifactId>spring-data-cockroachdb-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
